<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="showcase_app_name">Search Demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_header_text">YAHOO MOBILE SEARCH SDK DEMO</string>

    <string name="demo_search_assist">Search Assist: </string>
    <string name="demo_voice_search">Voice Search: </string>
    <string name="demo_results">Results: </string>
    <string name="demo_on">ON</string>
    <string name="demo_off">OFF</string>
    <string name="demo_search">Search</string>
    <string name="demo_search_images">Search Images</string>
    <string name="demo_search_media">Search Media</string>
    <string name="demo_search_white_theme">Search in White Theme</string>
    <string name="demo_search_dark_theme">Search in Dark Theme</string>
    <string name="demo_search_transparent_theme">Search in Transparent Theme</string>
    <string name="demo_search_settings_result">Results (Select one or more types)</string>

    <string name="demo_search_result_all">All</string>
    <string name="demo_search_result_images_only">Images only</string>
    <string name="demo_search_result_images_video">Images and Video</string>
    <string name="demo_search_result_video_only">Videos only</string>

    <string name="demo_search_bar_message">Welcome to the Yahoo Search SDK Demo App. What follows are a series of example implementations of the SDK toolkit.</string>
    <string name="demo_content_suggest_message">Searches can be pre-populated with specific terms, to facilitate user exploration.</string>
    <string name="demo_search_settings_message">Here are a list of settings configurable within the Search SDK, which may or may not be highlighted in the rest of this demo app. You can change the settings to see the effect on the search experience</string>
    <string name="demo_search_to_link_message">The Search SDK supports a primary action that returns a web result as an object. This object can be copied into the app as a link</string>
    <string name="demo_search_themes_message">The Search SDK entry points and frames can be fully customized to match the UI elements of your app. The following are just few examples.
        Please refer to the Search SDK official documentation for a full list of recommended style guidelines.</string>

    <string name="search_assist">Search Assist</string>
    <string name="voice_search">Voice Search</string>
    <string name="demo_search_history">Search History</string>
    <string name="demo_content_suggest">Content Suggest (Autofill)</string>
    <string name="demo_content_suggest_cats_text">Tap a cat to search for images of \"Cats\" :</string>


    <string name="demo_web">Web</string>
    <string name="demo_images">Images</string>
    <string name="demo_video">Video</string>
    <string name="demo_custom_tab_text">Design custom tabs to seamlessly integrate app-specific search results within an elegant tab bar.</string>
    <string name="demo_search_buzz_text">Standalone android custom view which can be integrated by Apps for Trending Terms.</string>
    <string name="demo_tumblr_web">Tumblr + Web</string>
    <string name="demo_tumblr_web_local">Tumblr + Web + Local</string>
    <string name="demo_web_image_video_tumblr">Web + Image + Video + Tumblr</string>
    <string name="demo_search_buzz_default">Deafult Trending view</string>
    <string name="demo_search_buzz_customized">Customized Trending view</string>
    <string name="demo_preview">Preview</string>

    <!--Search to link Screen-->
    <string name="demo_search_link">Search for a link</string>
    <string name="demo_search_image">Search for an Image</string>
    <string name="demo_search_video">Search for a Video</string>
    <string name="demo_search_to_link_result">Result: </string>


    <string name="augmented_reality">Search: Augmented Reality</string>


    <!-- Nav Drawer Menu Items -->
    <string-array name="search_demo_nav_drawer_items">
        <item android:id="@+id/search_bar_demo">Search Bar</item>
        <item android:id="@+id/content_suggest">Content Suggest</item>
        <item android:id="@+id/search_to_link">Search to Link</item>
        <item android:id="@+id/themes">Themes</item>
        <item android:id="@+id/custom_tabs">Custom Tabs</item>
        <item android:id="@+id/custom_tabs">Search Buzz</item>
        <item android:id="@+id/search_settings">Settings</item>
        <!--<item android:id="@+id/search_themes">Themes</item>-->
        <!--<item android:id="@+id/search_help">Help</item>-->
        <!--<item android:id="@+id/search_terms_conditions">Terms and Conditions</item>-->
    </string-array>
    <string name="title_activity_launcher_demo">LauncherDemoActivity</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Trending View-->
    <string name="demo_trending_intialize_text">Initializing Trending View. Please wait..</string>

</resources>
