<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/search_settings_message_textview"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/demo_search_settings_message"
            style="@style/Widget.SearchDemo.MessageTextView"
            android:textAppearance="@style/TextAppearance.SearchDemo.MessageTextAppearance" />


        <Switch
            android:id="@+id/search_settings_assist_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_assist"
            android:checked="true"
            android:switchPadding="@dimen/search_settings_switch_padding"
            android:layout_margin="@dimen/search_demo_fragment_margin"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/search_settings_switch_text_size"
            android:layout_below="@+id/search_settings_message_textview"
            android:layout_alignParentRight="true" />

        <View
            android:id="@+id/search_settings_assist_switch_divider"
            android:layout_below="@id/search_settings_assist_switch"
            style="@style/Widget.SearchDemo.Separator" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_search_settings_result"
            android:layout_marginLeft="@dimen/search_demo_fragment_margin"
            android:layout_marginRight="@dimen/search_demo_fragment_margin"
            android:layout_marginTop="@dimen/search_demo_fragment_margin"
            android:layout_marginBottom="@dimen/search_settings_result_textview_bottom_margin"
            android:textColor="@android:color/black"
            android:layout_below="@id/search_settings_assist_switch_divider"
            android:id="@+id/search_settings_result_textview" />

        <LinearLayout
            android:id="@+id/search_settings_checkbox_container"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_below="@+id/search_settings_result_textview"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_web"
                android:layout_marginLeft="@dimen/search_demo_fragment_margin"
                android:id="@+id/search_settings_web_checkbox"
                android:layout_weight="1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_images"
                android:id="@+id/search_settings_image_checkbox"
                android:layout_weight="1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_video"
                android:id="@+id/search_settings_video_checkbox"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:id="@+id/checkbox_separator"
            style="@style/Widget.SearchDemo.Separator"
            android:layout_below="@id/search_settings_checkbox_container" />

        <TextView
            android:id="@+id/search_settings_content_suggest_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_content_suggest"
            android:layout_margin="@dimen/search_demo_fragment_margin"
            android:textColor="@android:color/black"
            android:layout_below="@id/checkbox_separator" />

        <EditText
            android:id="@+id/search_settings_content_suggest_edittext"
            android:layout_marginLeft="@dimen/search_demo_fragment_margin"
            android:layout_marginRight="@dimen/search_demo_fragment_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/search_settings_autofill_edit_text_size"
            android:textColor="@android:color/black"
            android:layout_below="@id/search_settings_content_suggest_textview" />

        <Button
            android:id="@+id/search_settings_preview_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/search_preview_demo_button"
            android:text="@string/demo_preview"
            android:textSize="@dimen/search_settings_preview_button_text_size"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/search_settings_content_suggest_edittext"
            android:paddingLeft="@dimen/search_settings_preview_button_padding"
            android:paddingRight="@dimen/search_settings_preview_button_padding" />

    </RelativeLayout>
</ScrollView>
