<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/search_assist_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.SearchDemo.SearchSettings"
        android:layout_alignParentLeft="true"
        android:text="@string/demo_search_assist" />

    <TextView
        android:id="@+id/search_assist_status_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/search_settings_text_padding"
        android:textAppearance="@style/TextAppearance.SearchDemo.SearchSettings"
        android:layout_toRightOf="@id/search_assist_textview"
        android:text="@string/demo_on" />

    <TextView
        android:id="@+id/voice_search_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.SearchDemo.SearchSettings"
        android:layout_below="@id/search_assist_textview"
        android:layout_alignParentLeft="true"
        android:text="@string/demo_voice_search" />

    <TextView
        android:id="@+id/voice_search_status_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/search_settings_text_padding"
        android:layout_below="@id/search_assist_textview"
        android:textAppearance="@style/TextAppearance.SearchDemo.SearchSettings"
        android:layout_toRightOf="@id/voice_search_textview"
        android:text="@string/demo_on" />

    <TextView
        android:id="@+id/search_results_textview"
        android:layout_below="@id/voice_search_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.SearchDemo.SearchSettings"
        android:layout_alignParentLeft="true"
        android:text="@string/demo_results" />

    <TextView
        android:id="@+id/search_results_status_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/search_settings_text_padding"
        android:textAppearance="@style/TextAppearance.SearchDemo.SearchSettings"
        android:layout_toRightOf="@id/search_results_textview"
        android:layout_below="@id/voice_search_status_textview" />

    <Button
        android:id="@+id/search_settings_preview_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/search_preview_demo_button"
        android:text="@string/demo_preview"
        android:textSize="@dimen/search_settings_preview_button_text_size"
        android:layout_alignParentRight="true"
        android:paddingLeft="@dimen/search_settings_preview_button_padding"
        android:paddingRight="@dimen/search_settings_preview_button_padding" />
</merge>