<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/search_bar_margin"
            android:gravity="center"
            android:text="@string/demo_custom_tab_text"/>

        <View style="@style/Widget.SearchDemo.Separator" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/demo_tumblr_web"/>


        <ImageView
            android:id="@+id/demo_two_tabs"
            android:src="@drawable/tumblr_search"
            android:layout_margin="@dimen/search_bar_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_bar_height" />

        <View style="@style/Widget.SearchDemo.Separator" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/demo_web_image_video_tumblr"/>

        <ImageView
            android:id="@+id/demo_four_tabs"
            android:src="@drawable/tumblr_search"
            android:layout_margin="30dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_bar_height" />

        <View style="@style/Widget.SearchDemo.Separator" />

    </LinearLayout>
</ScrollView>