<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/search_to_link_message_textview"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/Widget.SearchDemo.MessageTextView"
            android:textAppearance="@style/TextAppearance.SearchDemo.MessageTextAppearance"
            android:text="@string/demo_search_to_link_message" />

        <TextView
            android:id="@+id/search_for_link_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/search_bar_margin"
            android:text="@string/demo_search_link"
            android:textStyle="bold" />

        <com.yahoo.android.search.showcase.views.SearchSettingsView
            android:id="@+id/search_for_link_settings_view"
            style="@style/Widget.SearchDemo.SearchBarSearchSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            style="@style/Widget.SearchDemo.Separator"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp" />

        <TextView
            android:id="@+id/search_for_image_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/search_bar_margin"
            android:text="@string/demo_search_image"
            android:textStyle="bold" />

        <com.yahoo.android.search.showcase.views.SearchSettingsView
            android:id="@+id/search_for_image_settings_view"
            style="@style/Widget.SearchDemo.SearchBarSearchSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            style="@style/Widget.SearchDemo.Separator"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp" />

        <TextView
            android:id="@+id/search_for_video_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/search_bar_margin"
            android:text="@string/demo_search_video"
            android:textStyle="bold" />

        <com.yahoo.android.search.showcase.views.SearchSettingsView
            android:id="@+id/search_for_video_settings_view"
            style="@style/Widget.SearchDemo.SearchBarSearchSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/search_for_share_result_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/search_demo_fragment_margin"
            android:textStyle="bold"
            android:text="@string/demo_search_to_link_result"
            android:textSize="@dimen/search_bar_demo_message_text_size"
            android:textColor="@color/demo_search_bar_message_text_color" />

        <ImageView
            android:id="@+id/search_to_link_preview_imageview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginLeft="@dimen/search_demo_fragment_margin"
            android:layout_marginRight="@dimen/search_demo_fragment_margin"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/search_to_share_result_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_margin="@dimen/search_demo_fragment_margin"
            android:padding="20dp"
            android:textSize="@dimen/search_bar_demo_message_text_size"
            android:textColor="@color/demo_search_bar_message_text_color" />
        
    </LinearLayout>
</ScrollView>